# customer-segmentation

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
artifacts/: ab_experiment_design.csv  sample_scores.csv
docs/: ADVANCED_SEGMENTATION_TUTORIAL.md
notebooks/: 01_online_retail_ii_segmentation.ipynb  01_online_retail_ii_segmentation.py  02_wholesale_customers_segmentation.ipynb  02_wholesale_customers_segmentation.py  03_online_retail_segmentation.ipynb  03_online_retail_segmentation.py  04_advanced_rfm_plus_whales_representation.ipynb  04_advanced_rfm_plus_whales_representation.py  05_advanced_temporal_holdout_hybrid_clv.ipynb  05_advanced_temporal_holdout_hybrid_clv.py  06_advanced_soft_hierarchical_scoring_playbooks.ipynb  06_advanced_soft_hierarchical_scoring_playbooks.py
segmentation/: __init__.py  metrics.py  preprocess.py  selection.py
segmentation/advanced/: __init__.py  features_plus.py  hybrid.py  scoring.py  soft_hierarchical.py  stability_time.py  temporal.py  whales.py
