[project]
name = "customer-segmentation"
version = "0.1.0"
description = "Production-minded unsupervised customer segmentation (RFM + wholesale) with stability-aware model selection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "jupytext>=1.19.4",
    "matplotlib>=3.11.0",
    "matplotlib-inline>=0.2.2",
    "nbconvert>=7.17.1",
    "numpy>=2.5.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pycaret==4.0.0a8",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
]
